Fixes projects wrap layout

--- a/CSS/home-smartphone.css
+++ b/CSS/home-smartphone.css
@@ -11,6 +11,8 @@ html, body{
     background-size: cover;
 }
 
+    /* ----- PROFILE IMAGE SECTION ----- */
+
 .profile-img-wrap{
     margin: 0 auto;
     width: 50%;
@@ -26,6 +28,8 @@ html, body{
     border-color: #2c2d2d;
     border-width: 5px;
 }
+
+    /* ----- NAV ----- */
 
 nav{
     margin: 50px 50px 30% 50px;
@@ -45,10 +49,7 @@ nav ul li a{
     color: inherit;
 }
 
-a[id="about-anchor"]:target{
-    -webkit-transform: translateY( -100px);
-    transform: translateY( -100px );
-}
+    /* ----- SHOWCASE ----- */
 
 #showcase:before{
     display: block;
@@ -61,6 +62,7 @@ a[id="about-anchor"]:target{
 
 #showcase{
     height: 500px;
+    margin-bottom: 30px;
 }
 
 #showcase:after{
@@ -75,30 +77,57 @@ a[id="about-anchor"]:target{
     height: 100%;
 }
 
+    /* ----- HOME SECTION ----- */
+
 #home-wrap{
     margin-top: -25%;
     text-align: center;
 }
+
+    /* ----- ABOUT SECTION ----- */
 
 #about-wrap{
     opacity: 0;
     visibility: hidden;
 }
 
+    /* ----- PROJECTS SECTION ----- */
+
 #projects-wrap{
     opacity: 0;
     visibility: hidden;
+    width: 100%;
 }
+
+.projects-choice-wrap{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 0;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+}
+
+.links-container{
+    height: 100%;
+}
+
+    /* ----- SOCIAL SECTION ----- */
 
 #social-wrap{
     opacity: 0;
     visibility: hidden;
 }
 
+    /* ----- CONTACT SECTION ----- */
+
 #contact-wrap{
     opacity: 0;
     visibility: hidden;
 }
+
+    /* ----- FOOTER ----- */
 
 footer{
     font-size: 0.8em;
